<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.reportLog.MyListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/empty_user_reports"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_guests"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_username"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/empty_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/anonymous_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/anonymous_message"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/text_guests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/report_list_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:text="@string/add_report"
            android:contentDescription="@string/add_report"
            app:icon="@drawable/add"
            app:iconPadding="@dimen/margin_standard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>